# nonebot_plugin_genshin_cos

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md  错误报告.md
.github/workflows/: python-package.yml
nonebot_plugin_genshin_cos/: __init__.py  config.py  hoyospider.py  utils.py
